<resources>
    <string name="app_name">Meal-o-Tron</string>
    <string name="action_settings">Settings</string>
    <string name="string_undo">Undo</string>

    <!--Navigation-->
    <string name="nav_home">Home</string>
    <string name="nav_graph">Stats</string>
    <string name="nav_alarm">Schedule</string>
    <string name="nav_dog">Dogs</string>

    <!--Stats screen-->
    <string name="stats_header_dog_weight">Dog weight</string>
    <string name="stats_header_food_availability">Food availability</string>
    <string name="stats_header_dog_arrival">Dog arrival</string>

    <!--Schedule screen-->
    <string name="schedule_header_ratio_used">ratio used</string>

    <string name="schedule_item_time" translatable="false">%1$02d:%2$02d</string>
    <string name="schedule_item_ratio" translatable="false">%1$d%%</string>

    <string name="schedule_ratio_dialog_header">Change Food Ratio</string>

    <string name="schedule_delete_snackbar">Schedule removed</string>

    <!--Dog screen-->
    <string name="dog_name">Dog name</string>
    <string name="dog_weight_text">Dog weight</string>
    <string name="dog_weight" translatable="false">%1$skg</string>
    <string name="dog_weigh">Weigh</string>

    <string name="dog_enable_weight">Enable weight regulation</string>
    <string name="dog_expected_weight">Expected weight (kg)</string>

    <!--Connect activity-->
    <string name="conact_address">IP Address</string>
    <string name="conact_connect">Connect</string>

    <!--Setup activity-->
    <string name="setact_title">Connect your Meal-o-Tron</string>
</resources>
