<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24px"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_round_insert_chart_24px"
            android:title="@string/nav_graph" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_round_alarm_24px"
            android:title="@string/nav_alarm" />
        <item
            android:id="@+id/nav_dogs"
            android:icon="@drawable/ic_dog"
            android:title="@string/nav_dog"/>
    </group>
</menu>